[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib     = { version = "6.0.0", features = [] }
serde      = { version = "1.0", features = ["derive"]  }
serde_json = { version = "1.0" }
anyhow     = { version = "1.0" }
rfd        = { version = "0.17.2" }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
